--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flipping",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "dependencies": {
     "@capacitor/android": "^7.4.3",
@@ -26,7 +26,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "icon": "npx capacitor-assets generate",
-    "deploy-android": "npm run build && npx cap copy && npx cap sync && npx cap open android"
+    "deploy-android": "npm run build && npx cap copy && npx cap sync android && npx cap open android"
   },
   "eslintConfig": {
     "extends": [
