--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "^7.4.3",
+    "@capacitor/ios": "7.4.4",
     "@capacitor/core": "^7.4.3",
     "@capacitor/preferences": "^7.0.2",
     "@react-three/cannon": "^6.6.0",
@@ -26,7 +27,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "icon": "npx capacitor-assets generate",
-    "deploy-android": "npm run build && npx cap copy && npx cap sync android && npx cap open android"
+    "deploy-android": "npm run build && npx cap copy && npx cap sync android && npx cap open android",
+    "deploy-ios": "npm run build && npx cap copy && npx cap sync ios && npx cap open ios"
   },
   "eslintConfig": {
     "extends": [
